corrected bios, link spacing

--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ article figcaption {
 }
 
 .friendsGrid .bio a {
-  margin: 5px;
+  margin: 2.5px;
 }
 
 /* Art Flexbox */
